css/src/content.less
#content {
  background: #FFF;
  padding: 0 10px;
  //padding: 9px 14px 30px 13px;
  overflow: hidden;
}

.content {
  clear: both;
  padding-top: 10px;

  h4 {
    border-bottom: 1px solid #ddd;
    color: #333;
    font-size: 20px;
    font-style: italic;
    font-weight: 400;
    line-height: 18px;
    margin-bottom: 4px;
  }

  ul {
    margin: 0 25px 15px 25px;
    padding: 0;
  }

  li {
    list-style-type: disc;
    margin: 0 0 5px 0;
  }

  a:visited {
    color: #420;
  }

  h3 {
    border-bottom: 1px solid #CCC;
  }

  strong {
    color: #000;
  }

  blockquote {
    border-left: 5px solid #ccc;
    margin: 0 15px 10px 0;
    padding-left: 10px;
    font-style: italic;

    p {
      padding-bottom: 0;
      margin-bottom: 10px;
    }

    strong {
      font-style: italic;
      font-weight: bold;
    }
  }

  img.full-width, img.size-full {
    border: 1px solid #ccc;
    height: auto;
    width: 100%;
  }

  img.alignleft {
    float: left;
    margin-right: 10px;
    width: auto;
  }

  img.alignright {
    float: right;
    margin-left: 10px;
    width: auto;
  }

  .wp-caption img {
    border: none;
    padding: 0;
  }

  .wp-caption {
    border: 1px solid #ccc;
    background-color: #eee;
    text-align: center;
    margin-bottom: 10px;
    width: auto !important;
  }

  .wp-caption.alignleft {
    float: left;
    margin-right: 10px;
  }

  .wp-caption.alignright {
    float: right;
    margin-left: 10px;
  }

  .wp-caption p {
    text-align: center;
    font-style: italic;
    margin: 0 5px 5px 5px;
    padding: 0;
  }

  .aside {
    background-color: #F0F9FF;
    border-top: 1px solid #ccc;
    border-bottom: 1px solid #ccc;
    left: -13px;
    font-style: italic;
    margin: 0 0 10px 0;
    padding: 5px 0 0 13px;
    position: relative;
    width: 506px;
  }

  .aside.alert {
    background-color: #FFF9D8;
  }

  .aside strong {
    font-size: 14px;
  }
}

@media only screen and (min-width: 768px) {
  #content {
    float: left;
    width: 492px;
  }
}

